@@ -45,7 +45,8 @@ enum {
 	UDPSOCKET_HANDLER,
 	SERVERSOCKET_HANDLER,
 	CLIENTUDPSOCKET_HANDLER,
-
+	PROXY_SOCKET_HANDLER,
+	
 	// Custom Events
 
 	ID_CORETIMER,
